--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "14.x"
   }
+  
 }
 
