--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../Develop/client && npm i",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -22,7 +22,7 @@
     "nodemon": "^2.0.4"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   }
   
 }
